# detrix

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.tests.yml  Taskfile.yml  clippy.toml  detrix.minimal.toml  detrix.toml
clients/: Taskfile.yml
clients/python/: ARCHITECTURE.md  README.md  pyproject.toml
clients/python/detrix/: __init__.py  _operations.py  _state.py  auth.py  config.py  control.py  daemon.py  debugger.py  errors.py
clients/python/detrix/_generated/: __init__.py  models.py
clients/python/examples/: basic_usage.py  test_wake.py  trade_bot_detrix.py
clients/python/tests/: __init__.py  test_auth.py  test_concurrent.py  test_config.py  test_control.py  test_daemon.py  test_edge_cases.py  test_error_recovery.py  test_integration.py  test_state.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: basic_usage.rs  test_wake.rs  trade_bot.rs
clients/rust/src/: config.rs  error.rs  generated.rs  lib.rs  state.rs
clients/rust/src/auth/: mod.rs  token.rs
clients/rust/src/control/: handlers.rs  mod.rs  server.rs
clients/rust/src/daemon/: client.rs  mod.rs
clients/rust/src/lldb/: discovery.rs  manager.rs  mod.rs
clients/rust/xtask/: Cargo.toml
clients/rust/xtask/src/: main.rs
crates/detrix-api/: Cargo.toml  build.rs
crates/detrix-api/proto/: common.proto  connections.proto  metrics.proto  streaming.proto
crates/detrix-api/src/: constants.rs  error.rs  lib.rs  location_serde.rs  mcp_client_tracker.rs  state.rs  supervisor.rs  system_metrics.rs  test_support.rs  types.rs
crates/detrix-api/src/common/: diff_parser.rs  expression_extractor.rs  mod.rs  parsing.rs
crates/detrix-api/src/grpc/: auth.rs  client.rs  connections.rs  conversions.rs  interceptor.rs  mod.rs  streaming.rs
crates/detrix-api/src/http/: error.rs  mcp.rs  mod.rs  paths.rs  proto_adapters.rs  routes.rs  server.rs  websocket.rs
crates/detrix-api/src/mcp/: conversions.rs  error.rs  format.rs  helpers.rs  instrumentation.rs  mod.rs  params.rs  prompts.rs  proto_adapters.rs  resources.rs  server.rs
crates/detrix-api/tests/: grpc_e2e.rs  grpc_integration_tests.rs  mcp_e2e_tests.rs  mcp_tests.rs
crates/detrix-application/: Cargo.toml
crates/detrix-application/src/: context.rs  error.rs  lib.rs
crates/detrix-application/src/middleware/: mod.rs  reconnecting_adapter.rs  reconnecting_factory.rs
crates/detrix-application/src/safety/: base_validator.rs  go.rs  mod.rs  python.rs  rust.rs  validation_result.rs
crates/detrix-application/src/services/: adapter_lifecycle_manager.rs  adapter_lifecycle_manager_tests.rs  anchor_service.rs  config_service.rs  config_service_tests.rs  connection_service.rs  dlq_recovery_service.rs  environment_service.rs  event_capture_service.rs  file_inspection_service.rs  file_inspection_types.rs  file_watcher_service.rs  jwt_validator.rs  mcp_usage_service.rs  metric_service_tests.rs  mod.rs  shutdown.rs  streaming_service.rs  streaming_service_tests.rs  system_event_service.rs
crates/detrix-application/tests/: adapter_lifecycle_e2e_tests.rs  anchor_relocation_e2e.rs  connection_service_tests.rs  test_support.rs
crates/detrix-cli/: Cargo.toml  build.rs
crates/detrix-cli/src/: context.rs  main.rs
crates/detrix-cli/src/commands/: config.rs  connection.rs  daemon.rs  diff.rs  event.rs  group.rs  init.rs  inspect.rs  mcp.rs  metric.rs  mod.rs  output.rs  ps.rs  serve.rs  status.rs  system_event.rs  usage.rs  validate.rs
crates/detrix-cli/src/grpc_client/: connections.rs  helpers.rs  metrics.rs  mod.rs  streaming.rs  types.rs
crates/detrix-cli/src/output/: format.rs  json.rs  mod.rs  table.rs
crates/detrix-cli/tests/: integration_test.rs
crates/detrix-config/: Cargo.toml  build.rs
crates/detrix-config/src/: adapter.rs  anchor.rs  api.rs  constants.rs  daemon.rs  lib.rs  loader.rs  output.rs  paths.rs  pid.rs  ports.rs  storage.rs  tui.rs  types.rs
crates/detrix-core/: Cargo.toml
crates/detrix-core/src/: connection.rs  connection_identity.rs  error.rs  expressions.rs  formatting.rs  lib.rs  system_event.rs
crates/detrix-dap/: Cargo.toml
crates/detrix-dap/src/: broker.rs  constants.rs  error.rs  error_detection.rs  ext.rs  factory.rs  go.rs  lib.rs  null_adapter.rs  protocol.rs  python.rs  rust.rs
crates/detrix-dap/tests/: go_tests.rs  multi_expr_logpoint_test.rs  protocol_tests.rs  python_tests.rs  rust_tests.rs
crates/detrix-logging/: Cargo.toml
crates/detrix-logging/src/: lib.rs
crates/detrix-lsp/: Cargo.toml
crates/detrix-lsp/src/: base.rs  cache.rs  client.rs  common.rs  error.rs  go.rs  lib.rs  manager.rs  mutation.rs  protocol.rs  python.rs  rust.rs  unified_tests.rs
crates/detrix-lsp/tests/: go_purity_e2e.rs  purity_e2e.rs  rust_purity_e2e.rs
crates/detrix-output/: Cargo.toml
crates/detrix-output/src/: circuit_breaker.rs  composite.rs  error.rs  lib.rs
crates/detrix-ports/: Cargo.toml
crates/detrix-ports/src/: adapter.rs  anchor.rs  cache.rs  dlq.rs  file_watcher.rs  lib.rs  mcp_usage.rs  output.rs  purity.rs  repository.rs
crates/detrix-storage/: Cargo.toml
crates/detrix-storage/dlq_migrations/: 001_dead_letter_queue.sql
crates/detrix-storage/migrations/: 001_schema.sql  002_add_uuid_columns.sql  002_safe_mode.sql
crates/detrix-storage/src/: dlq_storage.rs  json_helpers.rs  lib.rs  purity_cache.rs
crates/detrix-storage/tests/: integration_tests.rs
crates/detrix-testing/: Cargo.toml
crates/detrix-testing/fixtures/: app.py  auth.py  test.py
crates/detrix-testing/src/: fixtures.rs  lib.rs  proptest_config.rs
crates/detrix-testing/tests/: anchor_and_comments_e2e.rs  auth_e2e.rs  client_tests_e2e.rs  connection_crash_e2e.rs  daemon_restart_e2e.rs  go_client_wake_e2e.rs  health_check_e2e.rs  localhost_exempt_e2e.rs  mcp_bridge_e2e.rs  multi_expr_e2e.rs  port_cleanup_e2e.rs  rate_limit_e2e.rs  reconnection_e2e.rs  unified_e2e.rs  uuid_identity_e2e.rs
crates/detrix-tui/: Cargo.toml
crates/detrix-tui/src/: app.rs  client.rs  event.rs  input.rs  lib.rs  main.rs
fixtures/rust/: Cargo.toml  detrix_example_app.rs
fixtures/rust/src/: main.rs
(+199 files in other folders)
