[project]
name = "detrix-py"
version = "0.1.0"
description = "Python client for Detrix - debug-on-demand observability with zero overhead"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ilya Dyachenko" }
]
keywords = ["debugging", "observability", "debugpy", "dap", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "debugpy>=1.8.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "datamodel-code-generator>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/flashus/detrix"
Documentation = "https://github.com/flashus/detrix/tree/main/clients/python"
Repository = "https://github.com/flashus/detrix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detrix"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
