[package]
name = "detrix-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration types and loading for Detrix"

[dependencies]
# Domain types (Location, MetricMode, SafetyLevel)
detrix-core = { path = "../detrix-core" }

# Cross-platform home directory detection
dirs = "6.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
