[workspace]

[package]
name = "detrix-example-app"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "detrix_example_app"
path = "src/main.rs"

[features]
default = []
# Enable detrix-rs integration (for client E2E tests)
client = ["dep:detrix-rs"]

[dependencies]
# Optional: only included when "client" feature is enabled
detrix-rs = { path = "../../clients/rust", optional = true }
# ctrlc is always available since it's pure Rust
ctrlc = "3.4"

[profile.dev]
# Enable debug symbols for DAP debugging
debug = true
opt-level = 0

[profile.release]
# Keep debug symbols in release builds for observability
debug = true
